// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`molecules/EditToggle EditToggle should render editing state 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="staleWrapper"
    >
      <div />
    </div>
    <div
      class="editingWrapper"
    >
      <div>
        <button
          area-label="confirm"
          class="iconButton"
          data-testid="confirmButton"
          variants="[object Object]"
        >
          <svg
            animate="enter"
            aria-label="confirm"
            class="h-6 w-6"
            exit="exit"
            fill="none"
            height="24"
            initial="exit"
            stroke="currentColor"
            stroke-width="2"
            variants="[object Object]"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13l4 4L19 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              variants="[object Object]"
            />
          </svg>
        </button>
      </div>
      <div>
        <button
          area-label="cancel"
          class="iconButton"
          data-testid="cancelButton"
          variants="[object Object]"
        >
          <svg
            animate="enter"
            aria-label="cancel"
            class="h-6 w-6"
            data-testid="cancelIcon"
            exit="exit"
            fill="none"
            height="24"
            initial="exit"
            stroke="currentColor"
            stroke-width="2"
            variants="[object Object]"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              variants="[object Object]"
            />
            <path
              d="M6 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              variants="[object Object]"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`molecules/EditToggle EditToggle should render stale state 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="staleWrapper"
    >
      <div>
        <button
          area-label="edit"
          class="iconButton"
          data-testid="editButton"
          variants="[object Object]"
        >
          <svg
            animate="enter"
            aria-label="edit"
            class="h-6 w-6"
            exit="exit"
            fill="none"
            height="24"
            initial="exit"
            stroke="currentColor"
            stroke-width="2"
            variants="[object Object]"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
              stroke-linecap="round"
              stroke-linejoin="round"
              variants="[object Object]"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="editingWrapper"
    >
      <div />
      <div />
    </div>
  </div>
</div>
`;
